--- a/chrome-extension/assets/popup.html
+++ b/chrome-extension/assets/popup.html
@@ -8,7 +8,8 @@
 <body>
 <div id="main">
     <div id="status">
-        <a class ="add">Add to Knapsack!</a>
+        <input id="url" type="text" value=""/>
+        <a class="add">Add</a>
     </div>
     <div id="pages"></div>
     <div id="about">
