--- a/web/public/index.html
+++ b/web/public/index.html
@@ -14,6 +14,8 @@
     <body>
 
         <div class="container">
+            <div id="modal-container"></div>
+            
             <div class="header clearfix">
                 <div class="g-signin2 pull-right"></div>
                 <h3 class="text-muted">Knapsack</h3>
