--- a/chrome/assets/popup.html
+++ b/chrome/assets/popup.html
@@ -13,14 +13,16 @@
     </div>
     <div id="pages"></div>
     <div id="about">
-        <a class="install" href="https://play.google.com/store/apps/details?id=org.quuux.knapsack">Get Knapsack for Android!</a>
+      <a class="install" href="https://play.google.com/store/apps/details?id=org.quuux.knapsack">Get Knapsack for Android!</a>
+      <a class="goto" href="http://knapsack.quuux.org">Open my Knapsack</a>
     </div>
 </div>
 <style type="text/template" id="page-row-template">
     <div class="page">
        <a class="delete">&times;</a>
        <div class="body">
-          <span class="title">{0}</span>
+         <div class="title">{0}</div>
+         <div class="created">{1}</div>        
        </div>
     </div>
 </style>
